<?xml version="1.0"?>
<package>
  <name>open_manipulator_test</name>
  <version>0.0.0</version>
  <description>The open_manipulator_test package</description>
  <maintainer email="robotis@todo.todo">robotis</maintainer>
  <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>

  </export>
</package>
